WIP improved graphics

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <title>Another Ugly Tower Defense</title>
 <style>
   * {padding: 0; margin: 0}
-  body { background-color: #000000; }
-	canvas { background-color: #222222; }
+  body { background-color: #89a4a6 }
+	canvas { background-color: #89a4a6; }
 	form {background-color: white;}
 </style>
 <body>
@@ -24,7 +24,7 @@
 	</div>
 <script src="node_modules/pixi.js/dist/pixi.js"></script>
 <script src="src/util/keyboard.js"></script>
-<!--script src="src/User.js"></script-->
+<script src="src/util/gameUtilities.js"></script>
 <script src="src/Map.js"></script>
 <script src="src/tower/Tower.js"></script>
 <script src="src/tower/Towers.js"></script>
