--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <style>
   * {padding: 0; margin: 0}
   body { background-color: #89a4a6 }
-	canvas { background-color: #89a4a6; }
+	canvas { 
+    background-color: #89a4a6;
+   
+     }
 	form {background-color: white;}
 </style>
 <body>
@@ -20,7 +23,7 @@
 </form>
 </div>
   <div align="center">
-		<canvas id="game-canvas" width="800" height="600"></canvas>
+		<canvas id="game-canvas"></canvas>
 	</div>
 <script src="node_modules/pixi.js/dist/pixi.js"></script>
 <script src="src/util/keyboard.js"></script>
