--- a/index.html
+++ b/index.html
@@ -19,20 +19,21 @@
   <input type="text" name="bonus"><br>
   Lives:
   <input type="text" name="lives"><br>
-  <button onclick="nextWave()" type="button">Next Wave!</button>
+  <button onclick="nextWaveClick()" type="button">Next Wave!</button>
 </form>
 </div>
   <div align="center">
 		<canvas id="game-canvas"></canvas>
 	</div>
-<script src="node_modules/pixi.js/dist/pixi.js"></script>
-<script src="src/util/keyboard.js"></script>
+<script src="lib/pixi.js"></script>
+<script src="lib/bump.js"></script>
 <script src="src/util/gameUtilities.js"></script>
 <script src="src/Map.js"></script>
 <script src="src/tower/Tower.js"></script>
 <script src="src/tower/Towers.js"></script>
 
 <script src="src/wave/Wave.js"></script>
+<script src="src/wave/Enemy.js"></script>
 <script src="src/Main.js"></script>
 </body>
 
