enemy fades away

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 	</div>
 <script src="lib/pixi.js"></script>
 <script src="lib/bump.js"></script>
-<script src="src/util/gameUtilities.js"></script>
+<script src="src/util/GameUtilities.js"></script>
 <script src="src/Map.js"></script>
+<script src="src/tower/BulletManager.js"></script>
 <script src="src/tower/Tower.js"></script>
 <script src="src/tower/Towers.js"></script>
 <script src="src/wave/Enemy.js"></script>
